# real-estate-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
docs/: deployment.md
src/real_estate_monitor/: __init__.py  __main__.py  cli.py  config.py  database.py  diff.py  models.py  notify.py  report.py  repository.py  runner.py  scheduler.py  web.py
src/real_estate_monitor/scrapers/: __init__.py  base.py  dmproperties.py  drumelia.py  generic_agency.py  homerun.py  idealista.py  marbella_ev.py  panorama.py  solvilla.py
tests/: test_diff.py  test_dmproperties_scraper.py  test_idealista_scraper.py  test_panorama_scraper.py  test_runner_quality.py  test_solvilla_scraper.py
